--- a/.eslintrc
+++ b/.eslintrc
@@ -7,5 +7,10 @@
     "plugin:import/recommended",
     "plugin:import/typescript",
     "prettier"
-  ]
+  ],
+  "rules": {
+    "constructor-super": "error",
+    "no-dupe-keys": "error",
+    "accessor-pairs": "warn"
+  }
 }
