--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@tweenjs/tween.js": "^18.6.4",
     "cannon": "^0.6.2",
     "progress-webpack-plugin": "^1.0.12",
     "three.js": "^0.77.1"
