[+] add react interface

--- a/package.json
+++ b/package.json
@@ -10,20 +10,29 @@
   "dependencies": {
     "@three-ts/orbit-controls": "^1.4.7",
     "@tweenjs/tween.js": "^18.6.4",
+    "@types/react": "^17.0.40",
+    "@types/react-dom": "^17.0.13",
     "cannon-es": "^0.19.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "three": "~0.134.0"
   },
   "devDependencies": {
     "@types/three": "^0.134.0",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
+    "css-loader": "^6.7.1",
     "eslint": "^7.32.0",
     "file-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^2.6.0",
+    "node-sass": "^7.0.1",
+    "prettier": "^2.3.2",
+    "sass": "^1.49.9",
+    "sass-loader": "^12.6.0",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.4",
     "webpack": "^5.64.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.4.0",
-    "prettier": "^2.3.2"
+    "webpack-dev-server": "^4.4.0"
   }
 }
