--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,9 @@
     "target": "es6",
     "noImplicitAny": true,
     "module": "commonjs",
-    "strict": true
+    "strict": true,
+    "jsx": "react",
+    "allowJs": true,
+    "allowSyntheticDefaultImports": true
   }
 }
