--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,9 @@
     "ecmaVersion": 13,
     "sourceType": "module"
   },
+  "rules": {
+    "no-unused-vars": "off"
+  },
   "plugins": [
     "@typescript-eslint"
   ]
