--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "cannon-es": "^0.19.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "three": "~0.134.0"
+    "three": "~0.134.0",
+    "fork-ts-checker-webpack-plugin": "^7.2.1"
   },
   "devDependencies": {
     "@types/three": "^0.134.0",
